web/style.css
body
{
    font: 12px/1.2 Verdana, Arial, Helvetica, sans-serif;
    margin: 0;
}

div.header
{
    background-color: #c4d4d4;
    background-image: url("sixornot_6only_c_128.png");
    background-repeat: no-repeat;
    background-position: center right;
    padding: 0.5em;
    margin: 0;
    min-height: 136px;
}

h1
{
    padding: 0.5em;
    padding-bottom: 0.2em;
    margin: 0;
}

h2
{
    background-color: #78a16f;
    padding: 0.5em;
}

h2.menu
{
    margin-top: 0;
}

h2 a, h3 a
{
    font-size: xx-small;
    display: block;
    float: right;
    text-align: right;
    color: black;
}

h3
{
    background-color: #89b87f;
    margin: 0 0.5em;
    padding: 0.5em;
}

p
{
    margin: 1em;
}

p.version
{
    margin: 0 1em;
    padding-left: 0.5em;
}

p.monospace
{
    font-family: monospace;
}

pre
{
    margin: 1em 2em;
    padding: 0.5em;
    background-color: #d5e6e6;
}

ul.icon_list
{
    margin: 1em 2em;
    padding: 0.5em;
}

ul.icon_list li
{
    list-style: none;
    background-repeat: no-repeat;
    background-position: center left;
    margin: 0.5em 0;
    padding-left: 60px;
    vertical-align: middle;
}

li.i_other
{
    background-image: url("sixornot_other_cg_24.png");
}

li.i_6only
{
    background-image: url("sixornot_6only_cg_24.png");
}

li.i_6and4
{
    background-image: url("sixornot_6and4_cg_24.png");
}

li.i_4pot6
{
    background-image: url("sixornot_4pot6_cg_24.png");
}

li.i_4only
{
    background-image: url("sixornot_4only_cg_24.png");
}

